--- a/vignettes/vignettes.rmd
+++ b/vignettes/vignettes.rmd
@@ -36,3 +36,23 @@ library(dandelionR)
 ```
 
 This is a work in progress, so please feel free to open an issue if you encounter any problems or have any suggestions for improvement.
+
+## load data
+load the demo data
+```{r}
+demo_pseudo_rds <- dandelionR::demo_pseudo_rds
+```
+
+## filter the data
+subset the object to cells with paired chains, and prepare appropriately named and formatted columns for the pseudobulking functions to use as defaults
+```{r}
+demo_pseudo_rds <- setup_vdj_pseudobulk(demo_pseudo_rds, already.productive = FALSE)
+```
+plot the filtered data
+```{r}
+library(scater)
+plotUMAP(demo_pseudo_rds,color_by = "anno_lvl_2_final_clean")
+```
+
+## format transferring
+### milo object constructing and neighbour graph construction
