--- a/vignettes/vignettes.rmd
+++ b/vignettes/vignettes.rmd
@@ -32,17 +32,14 @@ if (!requireNamespace("BiocManager", quietly = TRUE))
     install.packages("BiocManager")
 if (!requireNamespace("scater", quietly = TRUE)) # only for the tutorial
     BiocManager::install("scater")
-if (!requireNamespace("fields", quietly = TRUE)) # only for the tutorial
-    install.packages("fields")
 devtools::install_github('tuonglab/dandelionR', dependencies = TRUE)
 ```
 
 ## Usage
 
-```{r, warning = FALSE}
+```{r, message = FALSE, warning = FALSE}
 library(dandelionR)
 library(scater)
-library(fields)
 ```
 
 This is a work in progress, so please feel free to open an issue if you encounter any problems or have any suggestions for improvement.
@@ -52,6 +49,11 @@ load the demo data
 ```{r, warning = FALSE}
 data(sce_vdj)
 ```
+set seed
+```{r}
+set.seed(100)
+```
+
 
 ## filter the data
 subset the object to cells with paired chains, and prepare appropriately named and formatted columns for the pseudobulking functions to use as defaults
@@ -102,10 +104,10 @@ plotPCA(pb.milo,color_by = "anno_lvl_2_final_clean")
 ### define root and branch tips
 ```{r}
 library(SingleCellExperiment)
-pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
-branch.tips <- c(which.max(pca[2,]),which.min(pca[2,]))
+pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))  # extract the PCA matrix
+branch.tips <- c(which.max(pca[2,]),which.min(pca[2,])) # define the CD8 terminal cell as the top-most cell and CD4 terminal cell as the bottom-most cell
 names(branch.tips)<-c("CD8+T","CD4+T")
-root <- which.min(pca[1,])
+root <- which.min(pca[1,]) # define the start of our trajectory as the left-most cell
 ```
 
 ### make diffusion map
@@ -119,37 +121,23 @@ dm <- DiffusionMap(t(pca),n_pcs=50, n_eigs = 10) # have transition matrix in slo
 dif.pse <- DPT(dm, tips = c(root,branch.tips),w_width = 0.1)
 ```
 
-```{r}
+```{r, message=FALSE}
 DPTroot <- paste0("DPT",root)
-colors <- colorRampPalette(c("#03346E","#6EACDA", "white", "darkred"))(80)
-plot(reducedDims(pb.milo)$PCA,  col = colors[cut(dif.pse[[DPTroot]],breaks=80)], pch=16, asp = 1)
-image.plot(legend.only = TRUE, 
-           zlim = range(dif.pse[[DPTroot]], na.rm = TRUE),  # 设置伪时间的范围
-           col = colors,  # 与点颜色相同的渐变颜色条
-           legend.lab = "Pseudotime")
+pb.milo$pseudotime <- dif.pse[[DPTroot]]
+pal <- colorRampPalette(rev((RColorBrewer::brewer.pal(9, "RdYlBu"))))(255)
+plotPCA(pb.milo, color_by = "pseudotime") + scale_colour_gradientn(colours = pal)
 ```
 
 ## Markov chain construction, store the result in pb.milo
 
 ```{r}
 diffusiontime <- dif.pse[[DPTroot]]
-pb.milo <- markov_probability(pb.milo, dm, diffusiontime = diffusiontime, branch.tips, root)
+pb.milo <- markov_probability(pb.milo, dm, branch.tips, root)
 ```
 
-```{r}
-colors <- colorRampPalette(c("#03346E","#6EACDA", "white", "darkred"))(80)
-plot(reducedDims(pb.milo)$PCA,  col = colors[cut(colData(pb.milo)[[names(branch.tips)[1]]],breaks=80)], pch=16, asp = 1)
-
-image.plot(legend.only = TRUE, 
-           zlim = range(colData(pb.milo)[[names(branch.tips)[1]]], na.rm = TRUE),  
-           col = colors,  
-           legend.lab = "Pseudotime")  
-plot(reducedDims(pb.milo)$PCA,  col = colors[cut(colData(pb.milo)[[names(branch.tips)[2]]],breaks=80)], pch=16, asp = 1)
-
-image.plot(legend.only = TRUE, 
-           zlim = range(colData(pb.milo)[[names(branch.tips)[2]]], na.rm = TRUE),  
-           col = colors,  
-           legend.lab = "Pseudotime") 
+```{r, message=FALSE}
+plotPCA(pb.milo,  color_by = "CD8+T") + scale_color_gradientn(colors = pal)
+plotPCA(pb.milo,  color_by = "CD4+T") + scale_color_gradientn(colors = pal)
 ```
 
 # Transfer
@@ -158,11 +146,12 @@ image.plot(legend.only = TRUE,
 ```{r}
 cdata<- project_pseudotime_to_cell(milo_object, pb.milo, branch.tips)
 ```
-```{r}
+
+```{r, message=FALSE}
 plotUMAP(cdata,color_by = "anno_lvl_2_final_clean",dimred = "UMAP_knngraph")
-plotUMAP(cdata,color_by = "pseudotime",dimred = "UMAP_knngraph")
-plotUMAP(cdata,color_by = "CD4+T",dimred = "UMAP_knngraph")
-plotUMAP(cdata,color_by = "CD8+T",dimred = "UMAP_knngraph")
+plotUMAP(cdata,color_by = "pseudotime",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata,color_by = "CD4+T",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata,color_by = "CD8+T",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
 ```
 
 
