--- a/vignettes/vignettes.rmd
+++ b/vignettes/vignettes.rmd
@@ -26,13 +26,16 @@ knitr::opts_chunk$set(
 
 You can install `dandelionR` from GitHub with:
 ```{r, eval = FALSE}
-if (!requireNamespace("devtools", quietly = TRUE))
+if (!requireNamespace("devtools", quietly = TRUE)) {
     install.packages("devtools")
-if (!requireNamespace("BiocManager", quietly = TRUE))
+}
+if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
-if (!requireNamespace("scater", quietly = TRUE)) # only for the tutorial
+}
+if (!requireNamespace("scater", quietly = TRUE)) { # only for the tutorial
     BiocManager::install("scater")
-devtools::install_github('tuonglab/dandelionR', dependencies = TRUE)
+}
+devtools::install_github("tuonglab/dandelionR", dependencies = TRUE)
 ```
 
 ## Usage
@@ -62,7 +65,7 @@ sce_vdj <- setup_vdj_pseudobulk(sce_vdj, already.productive = FALSE)
 ```
 plot the filtered data
 ```{r, warning = FALSE}
-plotUMAP(sce_vdj,color_by = "anno_lvl_2_final_clean")
+plotUMAP(sce_vdj, color_by = "anno_lvl_2_final_clean")
 ```
 
 ## Milo object constructing and neighbour graph construction
@@ -71,9 +74,9 @@ use miloR to create pseudobulks. Construct neighbor graph with many neighbors. S
 
 ```{r, warning = FALSE}
 library(miloR)
-traj_milo <- Milo(sce_vdj) 
-milo_object <- buildGraph(traj_milo, k = 50, d=20, reduced.dim="X_scvi") 
-milo_object <- makeNhoods(milo_object, reduced_dims="X_scvi", d=20)
+traj_milo <- Milo(sce_vdj)
+milo_object <- buildGraph(traj_milo, k = 50, d = 20, reduced.dim = "X_scvi")
+milo_object <- makeNhoods(milo_object, reduced_dims = "X_scvi", d = 20)
 ```
 ### Construct umap on milo neighbor graph
 
@@ -81,19 +84,19 @@ milo_object <- makeNhoods(milo_object, reduced_dims="X_scvi", d=20)
 milo_object <- milo_umap(milo_object)
 ```
 ```{r}
-plotUMAP(milo_object,color_by = "anno_lvl_2_final_clean",dimred = "UMAP_knngraph")
+plotUMAP(milo_object, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
 ```
 
 ## Construct pseudobulked VDJ feature space
 ```{r}
-pb.milo <- vdj_pseudobulk(milo_object,col_to_take = "anno_lvl_2_final_clean")
+pb.milo <- vdj_pseudobulk(milo_object, col_to_take = "anno_lvl_2_final_clean")
 
 # pbs = milo_object@nhoods
-pb.milo<-runPCA(pb.milo, assay.type = "X")
+pb.milo <- runPCA(pb.milo, assay.type = "X")
 ```
 
 ```{r}
-plotPCA(pb.milo,color_by = "anno_lvl_2_final_clean")
+plotPCA(pb.milo, color_by = "anno_lvl_2_final_clean")
 ```
 
 ## TCR trajectory inference using Absorbing Markov Chain
@@ -105,17 +108,17 @@ library(SingleCellExperiment)
 # extract the PCA matrix
 pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
 # define the CD8 terminal cell as the top-most cell and CD4 terminal cell as the bottom-most cell
-branch.tips <- c(which.max(pca[2,]), which.min(pca[2,])) 
+branch.tips <- c(which.max(pca[2, ]), which.min(pca[2, ]))
 names(branch.tips) <- c("CD8+T", "CD4+T")
 # define the start of our trajectory as the left-most cell
-root <- which.min(pca[1,])
+root <- which.min(pca[1, ])
 ```
 
 ### Construct diffusion map
 ```{r}
 library(destiny)
 # Run diffusion map on the PCA
-dm <- DiffusionMap(t(pca),n_pcs=50, n_eigs = 10)
+dm <- DiffusionMap(t(pca), n_pcs = 50, n_eigs = 10)
 ```
 
 ### Compute diffussion pseudotime on diffusion map
@@ -124,7 +127,7 @@ dif.pse <- DPT(dm, tips = c(root, branch.tips), w_width = 0.1)
 ```
 
 ```{r, message=FALSE}
-# the root is automatically called DPT + index of the root cell 
+# the root is automatically called DPT + index of the root cell
 DPTroot <- paste0("DPT", root)
 # store pseudotime in milo object
 pb.milo$pseudotime <- dif.pse[[DPTroot]]
@@ -137,29 +140,30 @@ plotPCA(pb.milo, color_by = "pseudotime") + scale_colour_gradientn(colours = pal
 
 ```{r}
 pb.milo <- markov_probability(
-  milo=pb.milo, 
-  diffusionmap=dm, 
-  terminal_state=branch.tips, 
-  root_cell=root, 
-  pseudotime_key="pseudotime")
+    milo = pb.milo,
+    diffusionmap = dm,
+    terminal_state = branch.tips,
+    root_cell = root,
+    pseudotime_key = "pseudotime"
+)
 ```
 ### Visualising branch probabilities
 ```{r, message=FALSE}
-plotPCA(pb.milo,  color_by = "CD8+T") + scale_color_gradientn(colors = pal)
-plotPCA(pb.milo,  color_by = "CD4+T") + scale_color_gradientn(colors = pal)
+plotPCA(pb.milo, color_by = "CD8+T") + scale_color_gradientn(colors = pal)
+plotPCA(pb.milo, color_by = "CD4+T") + scale_color_gradientn(colors = pal)
 ```
 ## Transfer
 
 ### Project pseudobulk data to each cell
 ```{r}
-cdata<- project_pseudotime_to_cell(milo_object, pb.milo, branch.tips)
+cdata <- project_pseudotime_to_cell(milo_object, pb.milo, branch.tips)
 ```
 ### Visualise the trajectory data on a per cell basis
 ```{r, message=FALSE}
-plotUMAP(cdata,color_by = "anno_lvl_2_final_clean",dimred = "UMAP_knngraph")
-plotUMAP(cdata,color_by = "pseudotime",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata,color_by = "CD4+T",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata,color_by = "CD8+T",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
+plotUMAP(cdata, color_by = "pseudotime", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD4+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
 ```
 
 
