--- a/vignettes/dandelionR.rmd
+++ b/vignettes/dandelionR.rmd
@@ -8,7 +8,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 ```{r, echo=FALSE, results="hide", message=FALSE}
-knitr::opts_chunk$set(error=FALSE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(error = FALSE, message = FALSE, warning = FALSE)
 library(BiocStyle)
 ```
 
@@ -31,13 +31,16 @@ knitr::opts_chunk$set(
 
 You can install `dandelionR` from GitHub with:
 ```{r, eval = FALSE}
-if (!requireNamespace("devtools", quietly = TRUE))
+if (!requireNamespace("devtools", quietly = TRUE)) {
     install.packages("devtools")
-if (!requireNamespace("BiocManager", quietly = TRUE))
+}
+if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
-if (!requireNamespace("scater", quietly = TRUE)) # only for the tutorial
+}
+if (!requireNamespace("scater", quietly = TRUE)) { # only for the tutorial
     BiocManager::install("scater")
-devtools::install_github('tuonglab/dandelionR', dependencies = TRUE)
+}
+devtools::install_github("tuonglab/dandelionR", dependencies = TRUE)
 ```
 
 ## Usage
@@ -68,7 +71,7 @@ sce_vdj <- setupVdjPseudobulk(sce_vdj, already.productive = FALSE)
 
 We can visualise the UMAP of the filtered data.
 ```{r, warning = FALSE}
-plotUMAP(sce_vdj,color_by = "anno_lvl_2_final_clean")
+plotUMAP(sce_vdj, color_by = "anno_lvl_2_final_clean")
 ```
 
 ## Milo object and neighbourhood graph construction
@@ -76,9 +79,9 @@ plotUMAP(sce_vdj,color_by = "anno_lvl_2_final_clean")
 We will use miloR to create the pseudobulks based on the gene expression data. The goal is to construct a neighbourhood graph with many neighbors with which we can sample the representative neighbours to form the objects.
 ```{r, warning = FALSE}
 library(miloR)
-traj_milo <- Milo(sce_vdj) 
-milo_object <- buildGraph(traj_milo, k = 50, d=20, reduced.dim="X_scvi") 
-milo_object <- makeNhoods(milo_object, reduced_dims="X_scvi", d=20)
+traj_milo <- Milo(sce_vdj)
+milo_object <- buildGraph(traj_milo, k = 50, d = 20, reduced.dim = "X_scvi")
+milo_object <- makeNhoods(milo_object, reduced_dims = "X_scvi", d = 20)
 ```
 ### Construct UMAP on milo neighbor graph
 
@@ -87,22 +90,22 @@ We can visualise this milo object using UMAP.
 milo_object <- miloUmap(milo_object)
 ```
 ```{r}
-plotUMAP(milo_object,color_by = "anno_lvl_2_final_clean",dimred = "UMAP_knngraph")
+plotUMAP(milo_object, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
 ```
 
 ## Construct pseudobulked VDJ feature space
 
 Next, we will construct the pseudobulked VDJ feature space using the neighbourhood graph constructed above. We will also run PCA on the pseudobulked VDJ feature space.
 ```{r}
-pb.milo <- vdjPseudobulk(milo_object,col_to_take = "anno_lvl_2_final_clean")
+pb.milo <- vdjPseudobulk(milo_object, col_to_take = "anno_lvl_2_final_clean")
 
 # pbs = milo_object@nhoods
-pb.milo<-runPCA(pb.milo, assay.type = "Feature_space")
+pb.milo <- runPCA(pb.milo, assay.type = "Feature_space")
 ```
 
 We can visualise the PCA of the pseudobulked VDJ feature space.
 ```{r}
-plotPCA(pb.milo,color_by = "anno_lvl_2_final_clean")
+plotPCA(pb.milo, color_by = "anno_lvl_2_final_clean")
 ```
 
 ## TCR trajectory inference using Absorbing Markov Chain
@@ -116,17 +119,17 @@ library(SingleCellExperiment)
 # extract the PCA matrix
 pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
 # define the CD8 terminal cell as the top-most cell and CD4 terminal cell as the bottom-most cell
-branch.tips <- c(which.max(pca[2,]), which.min(pca[2,])) 
+branch.tips <- c(which.max(pca[2, ]), which.min(pca[2, ]))
 names(branch.tips) <- c("CD8+T", "CD4+T")
 # define the start of our trajectory as the left-most cell
-root <- which.min(pca[1,])
+root <- which.min(pca[1, ])
 ```
 
 ### Construct diffusion map
 ```{r}
 library(destiny)
 # Run diffusion map on the PCA
-dm <- DiffusionMap(t(pca),n_pcs=50, n_eigs = 10)
+dm <- DiffusionMap(t(pca), n_pcs = 50, n_eigs = 10)
 ```
 
 ### Compute diffussion pseudotime on diffusion map
@@ -135,7 +138,7 @@ dif.pse <- DPT(dm, tips = c(root, branch.tips), w_width = 0.1)
 ```
 
 ```{r, message=FALSE}
-# the root is automatically called DPT + index of the root cell 
+# the root is automatically called DPT + index of the root cell
 DPTroot <- paste0("DPT", root)
 # store pseudotime in milo object
 pb.milo$pseudotime <- dif.pse[[DPTroot]]
@@ -148,19 +151,20 @@ plotPCA(pb.milo, color_by = "pseudotime") + scale_colour_gradientn(colours = pal
 
 ```{r}
 pb.milo <- markovProbability(
-  milo=pb.milo, 
-  diffusionmap=dm, 
-  terminal_state=branch.tips, 
-  root_cell=root, 
-  pseudotime_key="pseudotime")
+    milo = pb.milo,
+    diffusionmap = dm,
+    terminal_state = branch.tips,
+    root_cell = root,
+    pseudotime_key = "pseudotime"
+)
 ```
 
 ### Visualising branch probabilities
 
 With the Markov chain probabilities computed, we can visualise the branch probabilities towards CD4+ or CD8+ T-cell fate on the PCA plot.
 ```{r, message=FALSE}
-plotPCA(pb.milo,  color_by = "CD8+T") + scale_color_gradientn(colors = pal)
-plotPCA(pb.milo,  color_by = "CD4+T") + scale_color_gradientn(colors = pal)
+plotPCA(pb.milo, color_by = "CD8+T") + scale_color_gradientn(colors = pal)
+plotPCA(pb.milo, color_by = "CD4+T") + scale_color_gradientn(colors = pal)
 ```
 
 ## Transfer
@@ -169,15 +173,15 @@ The next step is to project the pseudotime and the branch probability informatio
 
 ### Project pseudobulk data to each cell
 ```{r}
-cdata<- projectPseudotimeToCell(milo_object, pb.milo, branch.tips) 
+cdata <- projectPseudotimeToCell(milo_object, pb.milo, branch.tips)
 ```
 
 ### Visualise the trajectory data on a per cell basis
 ```{r, message=FALSE}
-plotUMAP(cdata,color_by = "anno_lvl_2_final_clean",dimred = "UMAP_knngraph")
-plotUMAP(cdata,color_by = "pseudotime",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata,color_by = "CD4+T",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata,color_by = "CD8+T",dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
+plotUMAP(cdata, color_by = "pseudotime", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD4+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
 ```
 
 And that's it! We have successfully inferred the trajectory of the T-cells in this dataset!
