--- a/vignettes/dandelionR.rmd
+++ b/vignettes/dandelionR.rmd
@@ -11,6 +11,7 @@ vignette: >
 knitr::opts_chunk$set(error = FALSE, message = FALSE, warning = FALSE)
 library(BiocStyle)
 ```
+[![codecov](https://codecov.io/gh/tuonglab/dandelionR/graph/badge.svg?token=dd1bBTW48K)](https://codecov.io/gh/tuonglab/dandelionR)
 
 # Foreword
 
