--- a/vignettes/fromSceAndVDJ.Rmd
+++ b/vignettes/fromSceAndVDJ.Rmd
@@ -12,9 +12,9 @@ knitr::opts_chunk$set(error = FALSE, message = FALSE, warning = FALSE)
 library(BiocStyle)
 ```
 
-# Foreword
+# Interaction with scRepertoire
 
-Welcome to `dandelionR`!
+In a 
 
 `dandelionR` is an R package for performing single-cell immune repertoire trajectory analysis, based on the original python implementation in [dandelion](https://www.github.com/zktuong/dandelion). 
 
@@ -33,48 +33,49 @@ if (!requireNamespace("BiocManager", quietly = TRUE)) {
 if (!requireNamespace("scater", quietly = TRUE)) { # only for the tutorial
     BiocManager::install("scater")
 }
+if (!requireNamespace("scRepertoire", quietly = TRUE)) { # only for the tutorial
+    BiocManager::install("scRepertoire")
+}
 devtools::install_github("tuonglab/dandelionR", dependencies = TRUE)
-devtools::install_github("tuonglab/scRepertoire", ref = "fix-shuffling")
 ```
 
 
 ```{r}
-library(purrr)
-library(scRepertoire)
-library(SingleCellExperiment)
 library(dandelionR)
+library(scRepertoire)
 library(scater)
 ```
 
 ```{r}
-data("demo_sce")
-data("demo_airr")
+data(demo_sce)
+data(demo_airr)
 ```
 
 ```{r}
 contig.list <- loadContigs(input = demo_airr, format = "AIRR")
-combined.TCR <- combineTCR(contig.list, 
-                           removeNA = TRUE, 
-                           removeMulti = FALSE, 
-                           filterMulti = TRUE)
+combined.TCR <- combineTCR(contig.list,
+    removeNA = TRUE,
+    removeMulti = FALSE,
+    filterMulti = TRUE
+)
 ```
 
 ```{r}
-sce <- combineExpression(combined.TCR, 
-                         demo_sce, 
-                         cloneCall="gene", 
-                         filterNA = TRUE,
-                         proportion = TRUE)
+sce <- combineExpression(combined.TCR,
+    demo_sce,
+    cloneCall = "gene",
+    filterNA = TRUE,
+    proportion = TRUE
+)
 ```
 
 ```{r}
-sce <- setupVdjPseudobulk(sce, mode_option = "abT", allowed_chain_status = NULL,already.productive = TRUE, subsetby = "anno_lvl_2_final_clean", groups = c("CD8+T", "CD4+T", "ABT(ENTRY)", "DP(P)_T", "DP(Q)_T"))
+sce <- setupVdjPseudobulk(sce, mode_option = "abT", allowed_chain_status = NULL, already.productive = TRUE, subsetby = "anno_lvl_2_final_clean", groups = c("CD8+T", "CD4+T", "ABT(ENTRY)", "DP(P)_T", "DP(Q)_T"))
 ```
 
 
 ```{r}
-scater::plotUMAP(sce,color_by = "anno_lvl_2_final_clean")
-
+scater::plotUMAP(sce, color_by = "anno_lvl_2_final_clean")
 ```
 
 
@@ -83,16 +84,16 @@ We will use miloR to create the pseudobulks based on the gene expression data. T
 
 ```{r, warning = FALSE}
 library(miloR)
-traj_milo <- Milo(sce_vdj)
-milo_object <- buildGraph(traj_milo, k = 50, d = 20, reduced.dim = "X_scvi")
-milo_object <- makeNhoods(milo_object, reduced_dims = "X_scvi", d = 20)
+milo_object <- Milo(sce)
+milo_object <- buildGraph(milo_object, k = 30, d = 20, reduced.dim = "X_scvi")
+milo_object <- makeNhoods(milo_object, reduced_dims = "X_scvi", d = 20, prop = 0.3)
 ```
 ### Construct UMAP on milo neighbor graph
 
 We can visualise this milo object using UMAP.
 
 ```{r, warning = FALSE}
-milo_object <- miloUmap(milo_object)
+milo_object <- miloUmap(milo_object, n_neighbors=30)
 ```
 ```{r}
 plotUMAP(milo_object, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
@@ -105,7 +106,7 @@ Next, we will construct the pseudobulked VDJ feature space using the neighbourho
 pb.milo <- vdjPseudobulk(milo_object, col_to_take = "anno_lvl_2_final_clean")
 
 # pbs = milo_object@nhoods
-pb.milo <- runPCA(pb.milo, assay.type = "Feature_space")
+pb.milo <- runPCA(pb.milo, assay.type = "Feature_space", ncomponents=20)
 ```
 
 We can visualise the PCA of the pseudobulked VDJ feature space.
@@ -125,14 +126,14 @@ pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
 branch.tips <- c(which.max(pca[2, ]), which.min(pca[2, ]))
 names(branch.tips) <- c("CD8+T", "CD4+T")
 # define the start of our trajectory as the right-most cell
-root <- which.max(pca[1, ])
+root <- which.min(pca[1, ])
 ```
 
 ### Construct diffusion map
-```{r}
+```{r, warning = FALSE}
 library(destiny)
 # Run diffusion map on the PCA
-dm <- DiffusionMap(t(pca), n_pcs = 50, n_eigs = 10)
+dm <- DiffusionMap(t(pca), n_pcs = 10, n_eigs = 10)
 ```
 
 ### Compute diffussion pseudotime on diffusion map
@@ -158,7 +159,8 @@ pb.milo <- markovProbability(
     diffusionmap = dm,
     terminal_state = branch.tips,
     root_cell = root,
-    pseudotime_key = "pseudotime"
+    pseudotime_key = "pseudotime",
+    knn=30
 )
 ```
 
