--- a/vignettes/dandelionR1.Rmd
+++ b/vignettes/dandelionR1.Rmd
@@ -74,10 +74,8 @@ We will also subset the data to only include the main T-cell types: CD8+T, CD4+T
 sce1 <- setupVdjPseudobulk(sce, 
                           mode_option = "abT", 
                           already.productive = TRUE, 
-                          all
                           subsetby = "anno_lvl_2_final_clean", 
-                          groups = c("CD8+T", "CD4+T", "ABT(ENTRY)", "DP(P)_T", "DP(Q)_T")
-                          )
+                          groups = c("CD8+T", "CD4+T", "ABT(ENTRY)", "DP(P)_T", "DP(Q)_T"))
 ```
 
 Visualise the UMAP of the filtered data.
