--- a/vignettes/01_StartingFromscRepertoire.Rmd
+++ b/vignettes/01_StartingFromscRepertoire.Rmd
@@ -156,7 +156,7 @@ pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
 branch.tips <- c(which.max(pca[2, ]), which.min(pca[2, ]))
 names(branch.tips) <- c("CD8+T", "CD4+T")
 # define the start of our trajectory as the right-most cell
-root <- which.min(pca[1, ])
+root <- which.max(pca[1, ])
 ```
 
 ### Construct diffusion map
