fix a few more warnings/notes

--- a/vignettes/vignette_02.rmd
+++ b/vignettes/vignette_02.rmd
@@ -3,7 +3,7 @@ title: "Single-cell Immune Repertoire Trajectory Analysis with dandelionR"
 output: rmarkdown::html_vignette
 date: "`r Sys.Date()`"
 vignette: >
-  %\VignetteIndexEntry{dandelionR}
+  %\VignetteIndexEntry{Single-cell Immune Repertoire Trajectory Analysis with dandelionR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
