--- a/vignettes/vignette_01.Rmd
+++ b/vignettes/vignette_01.Rmd
@@ -3,7 +3,7 @@ title: "Single-cell Immune Repertoire Trajectory Analysis Starting From scRepert
 output: rmarkdown::html_vignette
 date: "`r Sys.Date()`"
 vignette: >
-  %\VignetteIndexEntry{dandelionR}
+  %\VignetteIndexEntry{Single-cell Immune Repertoire Trajectory Analysis Starting From scRepertoire}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
